# dingo

./: Cargo.toml  justfile
i18n/en/: dingo.ftl
res/: app.desktop
src/: app.rs
