[package]
name = "dingo"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/bbb651/dingo"

[dependencies]
futures-util = "0.3.30"
i18n-embed-fl = "0.8"
once_cell = "1.19.0"
open = "5.3.0"
rust-embed = "8.5.0"
tokio = { version = "1.39.3", features = ["full"] }

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["dbus-config", "tokio", "winit", "wgpu"]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
